Partially fixed the screens